--- a/app.css
+++ b/app.css
@@ -88,6 +88,12 @@ input, textarea, select {
   100% {
     transform: translateY(0px); } }
 
+@keyframes fadeInImage {
+  0% {
+    transform: translateY(70vh); }
+  100% {
+    transform: translateY(0%); } }
+
 body {
   background-color: #fff;
   color: black;
@@ -462,7 +468,7 @@ div.collection {
     line-height: 1;
     transform: translateY(220px); }
   div.collection img {
-    height: 100%;
+    height: 90%;
     will-change: transform;
     z-index: 0;
     transition: transform 0.8s;
