--- a/css/app.scss
+++ b/css/app.scss
@@ -55,10 +55,10 @@ $mq-small: 500px;
     100% {transform: translateY(0px)}
 }
 
-// @keyframes fadeInImage {
-//     0% {transform: translateY(0)}
-//     100% {transform: translateY(-100%)}
-// }
+@keyframes fadeInImage {
+    0% {transform: translateY(70vh)}
+    100% {transform: translateY(0%)}
+}
 
 
 
@@ -651,7 +651,7 @@ section.contact-title {
 
     img {
         
-        height: 100%;
+        height: 90%;
         will-change: transform;
         z-index: 0;
         transition: transform 0.8s;
