--- a/app.css
+++ b/app.css
@@ -96,9 +96,9 @@ input, textarea, select {
 
 @keyframes fadeInImage {
   0% {
-    transform: translateY(70vh); }
+    transform: translateY(75vh) rotate(20deg); }
   100% {
-    transform: translateY(0%); } }
+    transform: translateY(0%) rotate(10deg); } }
 
 body {
   background-color: #fff;
@@ -463,11 +463,12 @@ div.collection {
     justify-content: center;
     align-items: center;
     height: 100vh; }
-  div.collection span.img-span {
+  div.collection div.img-span {
     display: flex;
+    align-items: center;
     position: absolute;
     left: 50%;
-    height: 60vh;
+    height: 75vh;
     width: 100%;
     overflow: hidden;
     transform: translateX(-50%);
@@ -484,11 +485,11 @@ div.collection {
     overflow: hidden;
     line-height: 1; }
   div.collection img {
-    height: 100%;
+    height: 60vh;
     will-change: transform;
     z-index: 0;
     transition: transform 0.8s;
-    transform: translateY(70vh); }
+    transform: translateY(75vh); }
 
 ul.pagination {
   position: fixed;
