--- a/css/app.scss
+++ b/css/app.scss
@@ -65,6 +65,11 @@ $mq-small: 500px;
     100% {transform: translateY(0%) rotate(10deg)}
 }
 
+@keyframes date {
+    0% {transform: translateX(50px)}
+    100% {transform: translateX(0px)}
+}
+
 
 
 
@@ -657,7 +662,13 @@ section.contact-title {
 
     span {
         overflow: hidden;
-        // z-index: 4;
+        display:flex;
+
+        p.date {
+            font-size: 12px;
+            transition: transform ease;
+            transform: translateX(50px);
+        }
     }
 
     h1 {
