--- a/css/app.scss
+++ b/css/app.scss
@@ -614,6 +614,21 @@ section.contact-title {
   /* =========== Homepage =========== */
 
 
+
+  div.main-loader {
+    position: fixed;
+    top:0;
+    left:0;
+    z-index:999;
+    height:100vh;
+    width: 100%;
+    background-color: $primary-color;
+    transition: opacity 0.5s ease;
+    pointer-events: none;
+  }
+
+
+
   section.panel {
     overflow: hidden;
 
