--- a/app.css
+++ b/app.css
@@ -106,6 +106,12 @@ input, textarea, select {
   100% {
     transform: translateX(0px); } }
 
+@keyframes cursorText {
+  0% {
+    transform: translateY(12px); }
+  100% {
+    transform: translateY(0px); } }
+
 body {
   background-color: #fff;
   color: black;
@@ -448,10 +454,10 @@ div.contact-info--wrap {
 /* =========== Homepage =========== */
 div.cursor {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 20px;
-  height: 20px;
+  top: 0;
+  left: 0;
+  width: 0px;
+  height: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -460,7 +466,15 @@ div.cursor {
   transform: translate(-50%, -50%);
   transition: width 0.3s, height 0.3s;
   z-index: 999;
-  pointer-events: none; }
+  pointer-events: none;
+  font-size: 9px; }
+  div.cursor span {
+    overflow: hidden; }
+    div.cursor span p {
+      display: inline-block;
+      transform: translateY(12px);
+      transition: transform ease;
+      color: #999999; }
 
 div.cursor.is-active {
   width: 60px;
@@ -533,13 +547,17 @@ div.collection {
     align-items: center;
     letter-spacing: -5px;
     overflow: hidden;
-    line-height: 1; }
+    line-height: 1;
+    transition: letter-spacing 0.8s ease; }
   div.collection img {
     height: 60vh;
     will-change: transform;
     z-index: 0;
     transition: transform 0.8s;
     transform: translateY(75vh); }
+
+a.collection-link:hover {
+  cursor: none; }
 
 ul.pagination {
   position: fixed;
