--- a/app.css
+++ b/app.css
@@ -474,6 +474,7 @@ div.cursor {
       display: inline-block;
       font-family: Helvetica, sans-serif;
       margin: 0 1px;
+      will-change: transform;
       transform: translateY(-12px);
       transition: transform;
       color: #999999; }
