--- a/css/app.scss
+++ b/css/app.scss
@@ -647,6 +647,7 @@ section.contact-title {
             display: inline-block;
             font-family: Helvetica, sans-serif;
             margin: 0 1px;
+            will-change: transform;
             transform: translateY(-12px);
             transition: transform;
             color: $grey-color;
