--- a/app.css
+++ b/app.css
@@ -108,9 +108,11 @@ input, textarea, select {
 
 @keyframes cursorText {
   0% {
-    transform: translateY(-12px); }
+    transform: translateY(-12px);
+    opacity: 0; }
   100% {
-    transform: translateY(0px); } }
+    transform: translateY(0px);
+    opacity: 1; } }
 
 body {
   background-color: #fff;
@@ -461,28 +463,27 @@ div.cursor {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: solid 1px #999999;
+  background-color: #fc3e17;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   transition: width 0.3s, height 0.3s;
   z-index: 999;
   pointer-events: none;
-  font-size: 9px; }
+  font-size: 7px; }
   div.cursor p {
-    overflow: hidden; }
+    overflow: hidden;
+    color: black;
+    letter-spacing: 2px; }
     div.cursor p span {
       display: inline-block;
       font-family: Helvetica, sans-serif;
-      margin: 0 1px;
       will-change: transform;
       transform: translateY(-12px);
-      transition: transform;
-      color: #999999; }
+      transition: opacity 0.4s ease; }
 
 div.cursor.is-active {
   width: 60px;
-  height: 60px;
-  border: solid 1px #999999; }
+  height: 60px; }
 
 div.main-loader {
   position: fixed;
@@ -530,7 +531,7 @@ div.collection {
     align-items: center;
     position: absolute;
     left: 50%;
-    height: 75vh;
+    height: 70vh;
     width: 100%;
     overflow: hidden;
     transform: translateX(-50%);
