--- a/app.css
+++ b/app.css
@@ -173,7 +173,8 @@ header {
   transition: transform 1s 0.2s; }
   header a.social {
     color: black;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    transition: color 0.4s ease; }
   header a h1 svg {
     width: 120px;
     position: fixed;
@@ -255,7 +256,8 @@ div.menu {
   div.menu a {
     text-align: center;
     color: black;
-    font-size: 20px; }
+    font-size: 18px;
+    text-transform: uppercase; }
   div.menu .menu-container {
     display: flex;
     width: 100vw;
@@ -281,8 +283,40 @@ div.menu {
     justify-content: center;
     align-items: center; }
 
+.nav-item.coming-soon::after {
+  content: "Coming Soon";
+  color: blue;
+  position: absolute;
+  font-size: 8px;
+  background-color: white;
+  width: 54px;
+  height: 54px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  right: 10%;
+  transform: translateY(-50%) rotate(-10deg);
+  line-height: 1; }
+
 div.menu.open {
   transform: translateY(0); }
+
+div.menu-contact--links {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  left: 50%;
+  bottom: 40px;
+  transform: translateX(-50%);
+  width: 40%; }
+  div.menu-contact--links a {
+    font-size: 13px;
+    color: #575757;
+    transition: color 0.3s ease; }
+    div.menu-contact--links a:hover {
+      color: black; }
 
 /* =========== footer =========== */
 footer {
@@ -454,6 +488,18 @@ div.contact-info--wrap {
     margin-bottom: 30px; }
 
 /* =========== Homepage =========== */
+svg.white {
+  fill: #fff !important; }
+
+header a h1.homelogo svg {
+  width: 110px;
+  position: fixed;
+  left: 50%;
+  top: 30px;
+  transform: translateX(-50%);
+  fill: black;
+  transition: fill 0.4s cubic-bezier(0.72, 0, 0.01, 1); }
+
 div.cursor {
   position: absolute;
   top: 0;
