--- a/css/app.scss
+++ b/css/app.scss
@@ -6,6 +6,7 @@ $primary-color: black;
 $white-color: #fff;
 $grey-color: #999999;
 $orange-color: #fc3e17;
+$darkgrey-color: #575757;
 
 $body-font: "Maison Mono";
 $title-font: "Trade Gothic";
@@ -171,6 +172,7 @@ header {
     a.social {
         color: $primary-color; 
         text-transform: $uppercase;
+        transition: color 0.4s ease;
     }
 
     a h1 svg {
@@ -282,7 +284,8 @@ div.menu {
     a {
         text-align: center;
         color: $primary-color;
-        font-size: 20px;
+        font-size: 18px;
+        text-transform: uppercase;
     }
 
     .menu-container {
@@ -316,9 +319,49 @@ div.menu {
     }
 
   }
+
+    .nav-item.coming-soon::after {
+        content: "Coming Soon";
+        //color: $white-color;
+        color: blue;
+        position: absolute;
+        font-size: 8px;
+        background-color: white;
+        //border:solid 1px $white-color;
+        width: 54px;
+        height: 54px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top: 50%;
+        right: 10%;
+        transform: translateY(-50%) rotate(-10deg);
+        line-height: 1;
+    }
   
   div.menu.open {
     transform: translateY(0);
+  }
+
+  div.menu-contact--links {
+      display: flex;
+      justify-content: space-between;
+      position: absolute;
+      left:50%;
+      bottom: 40px;
+      transform: translateX(-50%);
+      width: 40%;
+      
+      a {
+        font-size: $link-size;
+        color: $darkgrey-color;
+        transition: color 0.3s ease;
+
+        &:hover {
+            color: $primary-color; 
+        }
+      }
   }
 
 
@@ -618,6 +661,20 @@ section.contact-title {
 
   /* =========== Homepage =========== */
 
+    svg.white {
+        fill: $white-color !important;  
+    }
+
+    header a h1.homelogo svg {
+        width: 110px;
+        position: fixed;
+        left: 50%;
+        top: 30px;
+        transform: translateX(-50%);
+        fill: $primary-color;
+        transition: fill 0.4s cubic-bezier(0.72, 0, 0.01, 1);
+    }
+
 
 
   div.cursor {
@@ -791,8 +848,6 @@ section.contact-title {
         top: 50%;
         transform: translateY(-50%);
         z-index: 10;
-
-        
 
         a {
             width: 16px;
