--- a/app.css
+++ b/app.css
@@ -390,7 +390,9 @@ section.profile {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    padding: 30px; }
+    padding: 30px;
+    max-width: 1400px;
+    margin: 0 auto; }
   section.profile div.profile-info {
     width: 50%;
     margin-left: 50%; }
@@ -546,7 +548,6 @@ section.panel {
   overflow: hidden; }
   section.panel div.title-wrap {
     position: relative;
-    overflow: hidden;
     z-index: 4; }
     section.panel div.title-wrap div.title-mask {
       height: 80%;
@@ -605,6 +606,24 @@ div.collection {
     z-index: 0;
     transition: transform 0.8s;
     transform: translateY(75vh); }
+
+div.collection span div.project-coming--soon {
+  position: absolute;
+  left: 14px;
+  top: 39%;
+  width: 50px;
+  height: 50px;
+  background-color: #fc3e17;
+  font-size: 8px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 1;
+  transform: translate(-50%, -50%);
+  padding: 30px; }
 
 a.collection-link:hover {
   cursor: none; }
