--- a/app.css
+++ b/app.css
@@ -176,7 +176,7 @@ header {
     text-transform: uppercase;
     transition: color 0.4s ease; }
   header a h1 svg {
-    width: 120px;
+    width: 110px;
     position: fixed;
     left: 50%;
     top: 30px;
@@ -464,7 +464,9 @@ div.contact-page--links {
 
 section div.contact-info--wrap {
   padding: 0 60px;
-  position: relative; }
+  position: relative;
+  max-width: 1400px;
+  margin: auto; }
   section div.contact-info--wrap div.emoji {
     font-size: 22px;
     margin-bottom: 30px; }
